force-app/main/default/objects/ServiceContract/fields/Account_Code__c.field-meta.xml
<CustomField>
    <fullName>Account_Code__c</fullName>
    <formula>Account.Pronto_Account_Code__c</formula>
    <label>Account Code</label>
    <type>Text</type>
</CustomField>