force-app/main/default/objects/ServiceContract/fields/Aggregate_Billing_Format__c.field-meta.xml
<CustomField>
    <fullName>Aggregate_Billing_Format__c</fullName>
    <label>Aggregate Billing Format</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>