force-app/main/default/objects/ServiceContract/fields/Amount_Match_SUM_of_Line_Items__c.field-meta.xml
<CustomField>
    <fullName>Amount_Match_SUM_of_Line_Items__c</fullName>
    <formula>IF( (Number_of_Line_Items__c  &gt;0 &amp;&amp;  Annual_Service_Amount__c =  Line_Items_SUM_Amount__c) || Number_of_Line_Items__c = 0 ,IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;green&quot;, 15, 15), IMAGE(&quot;/img/samples/color_red.gif&quot;, &quot;red&quot;, 15, 15 ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Match SUM of Line Items</label>
    <type>Text</type>
</CustomField>