force-app/main/default/objects/ServiceContract/fields/Annual_Service_Amount__c.field-meta.xml
<CustomField>
    <fullName>Annual_Service_Amount__c</fullName>
    <label>Annual Service Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>