force-app/main/default/objects/ServiceContract/fields/Billing_Cycle_Type__c.field-meta.xml
<CustomField>
    <fullName>Billing_Cycle_Type__c</fullName>
    <label>Billing Cycle Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Advance</fullName>
            </value>
            <value>
                <fullName>In Arrears</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>