force-app/main/default/objects/ServiceContract/fields/Billing_Terms__c.field-meta.xml
<CustomField>
    <fullName>Billing_Terms__c</fullName>
    <label>Billing Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Aggregated Billing</fullName>
            </value>
            <value>
                <fullName>Individual Work Orders</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
                <isActive>false</isActive>
                <label>Monthly</label>
            </value>
            <value>
                <fullName>Quarterly</fullName>
                <isActive>false</isActive>
                <label>Quarterly</label>
            </value>
            <value>
                <fullName>Yearly</fullName>
                <isActive>false</isActive>
                <label>Yearly</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>