force-app/main/default/objects/ServiceContract/fields/Capture_Transactions_Alternative_Rate__c.field-meta.xml
<CustomField>
    <fullName>Capture_Transactions_Alternative_Rate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allow Service Resources to be able to capture manual transaction</description>
    <inlineHelpText>Check if you would like to allow Service Resources to be able to capture transactions with alternative rate</inlineHelpText>
    <label>Capture Transactions (Alternative Rate)</label>
    <type>Checkbox</type>
</CustomField>