force-app/main/default/objects/ServiceContract/fields/Contract_Billing_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Contract_Billing_Cycle__c</fullName>
    <label>Contract Billing Cycle</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Half Yearly</fullName>
            </value>
            <value>
                <fullName>Yearly</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>