force-app/main/default/objects/ServiceContract/fields/Invoiced_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoiced_Date__c</fullName>
    <label>Invoiced Date</label>
    <type>Date</type>
</CustomField>