force-app/main/default/objects/ServiceContract/fields/Invoiced_From__c.field-meta.xml
<CustomField>
    <fullName>Invoiced_From__c</fullName>
    <label>Invoiced From</label>
    <type>Date</type>
</CustomField>