force-app/main/default/objects/ServiceContract/fields/Invoiced_To__c.field-meta.xml
<CustomField>
    <fullName>Invoiced_To__c</fullName>
    <label>Invoiced To</label>
    <type>Date</type>
</CustomField>