force-app/main/default/objects/ServiceContract/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <formula>StartDate &gt;= TODAY() &amp;&amp; EndDate &lt;= TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Active?</label>
    <type>Checkbox</type>
</CustomField>