force-app/main/default/objects/ServiceContract/fields/KPIs__c.field-meta.xml
<CustomField>
    <fullName>KPIs__c</fullName>
    <label>KPIs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>