force-app/main/default/objects/ServiceContract/fields/Line_Items_SUM_Amount__c.field-meta.xml
<CustomField>
    <fullName>Line_Items_SUM_Amount__c</fullName>
    <label>Line Items SUM Amount</label>
    <summarizedField>Service_Contract_Line_Item__c.Service_Rate__c</summarizedField>
    <summaryForeignKey>Service_Contract_Line_Item__c.Service_Contract__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>