force-app/main/default/objects/ServiceContract/fields/Next_Contract_Billing_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Contract_Billing_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Next Contract Billing Date</label>
    <type>Date</type>
</CustomField>