force-app/main/default/objects/ServiceContract/fields/Night_Time__c.field-meta.xml
<CustomField>
    <fullName>Night_Time__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Night Time</label>
    <referenceTo>BusinessHours</referenceTo>
    <relationshipName>Service_Contracts2</relationshipName>
    <type>Lookup</type>
</CustomField>