force-app/main/default/objects/ServiceContract/fields/Normal_Time__c.field-meta.xml
<CustomField>
    <fullName>Normal_Time__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Normal Time</label>
    <referenceTo>BusinessHours</referenceTo>
    <relationshipName>Service_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>