force-app/main/default/objects/ServiceContract/fields/NOW__c.field-meta.xml
<CustomField>
    <fullName>NOW__c</fullName>
    <formula>NOW()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NOW</label>
    <type>DateTime</type>
</CustomField>