force-app/main/default/objects/ServiceContract/fields/Number_of_Line_Items__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Line_Items__c</fullName>
    <description>Field used in order to show to calculate the flag</description>
    <label>Number of Line Items</label>
    <summaryForeignKey>Service_Contract_Line_Item__c.Service_Contract__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>