force-app/main/default/objects/ServiceContract/fields/Number_of_Pre_Purchased_Hours__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Pre_Purchased_Hours__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number of Pre-Purchased Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>