force-app/main/default/objects/ServiceContract/fields/Overtime__c.field-meta.xml
<CustomField>
    <fullName>Overtime__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Overtime</label>
    <referenceTo>BusinessHours</referenceTo>
    <relationshipName>Service_Contracts1</relationshipName>
    <type>Lookup</type>
</CustomField>