force-app/main/default/objects/ServiceContract/fields/Project_Code__c.field-meta.xml
<CustomField>
    <fullName>Project_Code__c</fullName>
    <label>Project Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>