force-app/main/default/objects/ServiceContract/fields/Pronto_Contract_No__c.field-meta.xml
<CustomField>
    <fullName>Pronto_Contract_No__c</fullName>
    <externalId>true</externalId>
    <label>Pronto Contract No</label>
    <length>20</length>
    <type>Text</type>
</CustomField>