force-app/main/default/objects/ServiceContract/fields/Quote_Number__c.field-meta.xml
<CustomField>
    <fullName>Quote_Number__c</fullName>
    <label>Quote Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>