force-app/main/default/objects/ServiceContract/fields/Remote_Access__c.field-meta.xml
<CustomField>
    <fullName>Remote_Access__c</fullName>
    <label>Remote Access</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>