force-app/main/default/objects/ServiceContract/fields/Report_Formatting__c.field-meta.xml
<CustomField>
    <fullName>Report_Formatting__c</fullName>
    <label>Report Formatting</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Template A</fullName>
            </value>
            <value>
                <fullName>Template B</fullName>
            </value>
            <value>
                <fullName>DPTI Invoice</fullName>
                <isActive>false</isActive>
                <label>DPTI Invoice</label>
            </value>
            <value>
                <fullName>Sydney Airport Invoice</fullName>
                <isActive>false</isActive>
                <label>Sydney Airport Invoice</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>