force-app/main/default/objects/ServiceContract/fields/Report_URL__c.field-meta.xml
<CustomField>
    <fullName>Report_URL__c</fullName>
    <formula>IF(ISPICKVAL( Report_Formatting__c , &#39;Template A&#39;),  HYPERLINK(&quot;https://gotosage.lightning.force.com/lightning/r/Report/00O3i000002gXyYEAU/view??fv0=&quot;+Name , &quot;Open Report&quot;) , 
IF(ISPICKVAL( Report_Formatting__c , &#39;Template B&#39;),  HYPERLINK(&quot;https://gotosage.lightning.force.com/lightning/r/Report/00O3i000002gXyZEAU/view?fv0=&quot;+Name , &quot;Open Report&quot;) , &#39;No Link&#39; ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Report URL</label>
    <type>Text</type>
</CustomField>