force-app/main/default/objects/ServiceContract/fields/Restricted_Site__c.field-meta.xml
<CustomField>
    <fullName>Restricted_Site__c</fullName>
    <label>Restricted Site</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>