force-app/main/default/objects/ServiceContract/fields/Service_Supplier_Markup__c.field-meta.xml
<CustomField>
    <fullName>Service_Supplier_Markup__c</fullName>
    <label>Service Supplier Markup</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>