force-app/main/default/objects/ServiceContract/fields/Shipping_City_Lower__c.field-meta.xml
<CustomField>
    <fullName>Shipping_City_Lower__c</fullName>
    <formula>LOWER( ShippingCity )</formula>
    <label>Shipping City Lower</label>
    <type>Text</type>
</CustomField>