force-app/main/default/objects/ServiceContract/fields/Shipping_Street_Lower__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Street_Lower__c</fullName>
    <formula>LOWER( ShippingStreet )</formula>
    <label>Shipping Street Lower</label>
    <type>Text</type>
</CustomField>