force-app/main/default/objects/ServiceContract/recordTypes/Customer_Contract_RT.recordType-meta.xml
<RecordType>
    <fullName>Customer_Contract_RT</fullName>
    <active>true</active>
    <label>Customer Contract</label>
</RecordType>