force-app/main/default/objects/ServiceContract/recordTypes/Template_Contract_RT.recordType-meta.xml
<RecordType>
    <fullName>Template_Contract_RT</fullName>
    <active>true</active>
    <label>Template Contract</label>
</RecordType>