force-app/main/default/objects/ServiceContract/validationRules/VR_SCO01_Contact_have_email.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_SCO01_Contact_have_email</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISBLANK(ContactId) = false, OR(ISNULL(Contact.Email),Contact.Email=&#39;&#39;))</errorConditionFormula>
    <errorDisplayField>ContactId</errorDisplayField>
    <errorMessage>The Contract Contact does not have an email address, please update the Contact or select a different contact</errorMessage>
</ValidationRule>