force-app/main/default/objects/ServiceContract/validationRules/VR_SCO02_Street_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_SCO02_Street_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(ShippingStreet ) &amp;&amp;  RecordType.DeveloperName = &#39;Customer_Contract_RT&#39;</errorConditionFormula>
    <errorDisplayField>ShippingStreet</errorDisplayField>
    <errorMessage>Please fill out the site street number and street name</errorMessage>
</ValidationRule>