force-app/main/default/objects/ServiceContract/validationRules/VR_SCO03_City_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_SCO03_City_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(ShippingCity ) &amp;&amp;  RecordType.DeveloperName = &#39;Customer_Contract_RT&#39;</errorConditionFormula>
    <errorDisplayField>ShippingCity</errorDisplayField>
    <errorMessage>Please fill out the site suburb</errorMessage>
</ValidationRule>