force-app/main/default/objects/ServiceContract/validationRules/VR_SCO04_Postcode_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_SCO04_Postcode_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( ShippingPostalCode  ) &amp;&amp;  RecordType.DeveloperName = &#39;Customer_Contract_RT&#39;</errorConditionFormula>
    <errorDisplayField>ShippingPostalCode</errorDisplayField>
    <errorMessage>Please fill out the site postcode</errorMessage>
</ValidationRule>