force-app/main/default/objects/ServiceContract/validationRules/VR_SCO05_State_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_SCO05_State_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( ShippingState   ) &amp;&amp;  RecordType.DeveloperName = &#39;Customer_Contract_RT&#39;</errorConditionFormula>
    <errorDisplayField>ShippingState</errorDisplayField>
    <errorMessage>Please fill out the site state</errorMessage>
</ValidationRule>