force-app/main/default/objects/ServiceContract/validationRules/VR_SCO06_Country_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_SCO06_Country_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( ShippingCountry  ) &amp;&amp;  RecordType.DeveloperName = &#39;Customer_Contract_RT&#39;</errorConditionFormula>
    <errorDisplayField>ShippingCountry</errorDisplayField>
    <errorMessage>Please fill out the site country</errorMessage>
</ValidationRule>