force-app/main/default/objects/ServiceContract/validationRules/VR_SCO08_BronzeNoContractFees.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_SCO08_BronzeNoContractFees</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Type__c , &#39;Bronze Support&#39;) &amp;&amp; NOT(ISPICKVAL(Contract_Billing_Cycle__c, &#39;None&#39;) ) &amp;&amp; NOT(ISBLANK(TEXT(Contract_Billing_Cycle__c)))</errorConditionFormula>
    <errorDisplayField>Contract_Billing_Cycle__c</errorDisplayField>
    <errorMessage>Bronze Support Contract cannot have Contract Billing Cycle</errorMessage>
</ValidationRule>