force-app/main/default/objects/ServiceContract/validationRules/VR_SCO09_BronzeNoNextContractBillingDate.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_SCO09_BronzeNoNextContractBillingDate</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Type__c , &#39;Bronze Support&#39;) &amp;&amp; NOT(ISBLANK(TEXT( Next_Contract_Billing_Date__c )))</errorConditionFormula>
    <errorDisplayField>Next_Contract_Billing_Date__c</errorDisplayField>
    <errorMessage>Bronze Support Contract cannot have Next Contract Billing Cycle</errorMessage>
</ValidationRule>