force-app/main/default/objects/ServiceContract/validationRules/VR_SCO10_BronzeNoServiceBillingCycle.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_SCO10_BronzeNoServiceBillingCycle</fullName>
    <active>false</active>
    <errorConditionFormula>ISPICKVAL(Type__c , &#39;Bronze Support&#39;) &amp;&amp; ISPICKVAL(Billing_Terms__c, &#39;Aggregated Billing&#39;)</errorConditionFormula>
    <errorDisplayField>Billing_Terms__c</errorDisplayField>
    <errorMessage>Bronze Support Contract cannot have Service Billing Cycle</errorMessage>
</ValidationRule>