force-app/main/default/objects/ServiceContract/validationRules/VR_SCO12_SilverPlusContractFees.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_SCO12_SilverPlusContractFees</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISPICKVAL(Type__c , &#39;Bronze Support&#39;)) &amp;&amp; (ISPICKVAL(Contract_Billing_Cycle__c, &#39;None&#39;) ) &amp;&amp;  $Profile.Name &lt;&gt; &#39;NOC Admin&#39; &amp;&amp;  NOT(ISCHANGED(Number_of_Pre_Purchased_Hours__c))</errorConditionFormula>
    <errorDisplayField>Contract_Billing_Cycle__c</errorDisplayField>
    <errorMessage>Contract Billing Cycle cannot be &#39;None&#39; for Silver, Gold and Platinum support</errorMessage>
</ValidationRule>