force-app/main/default/objects/ServiceContract/validationRules/VR_SCO13_NextBillingCannotBeAfterEndDate.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_SCO13_NextBillingCannotBeAfterEndDate</fullName>
    <active>true</active>
    <errorConditionFormula>Next_Contract_Billing_Date__c &gt;  EndDate</errorConditionFormula>
    <errorDisplayField>Next_Contract_Billing_Date__c</errorDisplayField>
    <errorMessage>Next Contract Billing Date cannot be after End Date of the Contract</errorMessage>
</ValidationRule>