force-app/main/default/objects/ServiceContract/validationRules/VR_SCO14_BillingCycleType.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_SCO14_BillingCycleType</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(TEXT(Billing_Cycle_Type__c)) &amp;&amp; NOT(ISBLANK(TEXT(Contract_Billing_Cycle__c))) &amp;&amp; NOT(ISPICKVAL(Contract_Billing_Cycle__c, &#39;None&#39;))</errorConditionFormula>
    <errorDisplayField>Billing_Cycle_Type__c</errorDisplayField>
    <errorMessage>This field is mandatory when the contract has a contract billing cycle</errorMessage>
</ValidationRule>