force-app/main/default/objects/ServiceContract/listViews/All_ServiceContracts.listView-meta.xml
<ListView>
    <fullName>All_ServiceContracts</fullName>
    <columns>CONTRACT.NAME</columns>
    <columns>CONTRACT.STARTDATE</columns>
    <columns>CONTRACT.ENDDATE</columns>
    <columns>CONTRACT.STATUS</columns>
    <columns>Pricebook2</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTRACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>ServiceContract.Customer_Contract_RT</value>
    </filters>
    <label>All Service Contracts</label>
</ListView>