force-app/main/default/objects/ServiceContract/listViews/Customer_Contracts_LV.listView-meta.xml
<ListView>
    <fullName>Customer_Contracts_LV</fullName>
    <columns>CONTRACT.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Account_Code__c</columns>
    <columns>CONTRACT.STARTDATE</columns>
    <columns>CONTRACT.ENDDATE</columns>
    <columns>CONTRACT.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTRACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>ServiceContract.Customer_Contract_RT</value>
    </filters>
    <label>Customer Contracts</label>
</ListView>