force-app/main/default/objects/ServiceContract/listViews/Template_Contracts_LV.listView-meta.xml
<ListView>
    <fullName>Template_Contracts_LV</fullName>
    <columns>CONTRACT.NAME</columns>
    <columns>CONTRACT.STARTDATE</columns>
    <columns>CONTRACT.ENDDATE</columns>
    <columns>CONTRACT.APPROVALSTATUS</columns>
    <columns>CONTRACT.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTRACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>ServiceContract.Template_Contract_RT</value>
    </filters>
    <label>Template Contracts</label>
</ListView>